--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,22 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Women's Self Defense and Safety | Women Make Some Noise
+title: Self-defense and Safety Instruction for Women | Women Make Some Noise
 email: wmsn@womenmakesomenoise.com
+logo: "assets/img/WMSN-logo-block-wh.jpg"
 description: >- # this means to ignore newlines until "baseurl:"
   Self-defense and Safety Instruction for Women. Our mission is to help women safeguard themselves against crime and assault, so they may enjoy long, fulfilled, and healthy lives.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://www.womenmakesomenoise.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: wmsnSelfDefense
 github_username:  jasonmccomb
 google_analytics: UA-44601685-9
+Facebook_username: Womenmakesomenoise
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
   - jekyll-admin
